# chunky-crayon

./: .gitignore  CANVAS_PERSISTENCE_FIX_PLAN.md  CLAUDE-old.md  CLAUDE.md  HETZNER_BOX.md  MRR_ANALYSIS.md  constants.ts  package.json  pnpm-lock.yaml  turbo.json  vitest.config.mts
.cursor/: mcp.json
.github/scripts/: i18n-merge-agent.mjs  i18n-merge-agent.test.mjs
.github/workflows/: backfill-orphaned-images.yml  backfill-profiles.yml  database-migrations.yml  deploy-chunky-crayon-worker.yml  e2e-tests.yml  i18n-merge-agent.yml  test-video-generation.yml  tests.yml  translate.yml  translation-review.yml
app/: actions.ts
apps/birthdayplaybook-web/: astro.config.ts  package.json  vercel.json
apps/boredomwheel-web/: .gitignore  astro.config.ts  package.json  vercel.json
apps/chunky-crayon-mobile/: .gitignore  README.md  api.ts  app.config.ts  eas.json  global.css  index.ts  metro.config.js  package.json  providers.tsx  react-native.config.js  tsconfig.json  types.ts
apps/chunky-crayon-mobile/modules/flood-fill/android/: CMakeLists.txt  build.gradle
apps/chunky-crayon-web/: .gitignore  BRUSH_SOUNDS.md  ad-assets.json  auth.ts  broll-assets.json  components.json  constants.ts  flags.ts  global.css  instrumentation-client.ts  instrumentation.ts  middleware.ts  next-auth.d.ts  next.config.ts  (+7 more)
docs/: ANALYTICS_PLAN.md  R2_STORAGE_MIGRATION.md  README.md  credits-ecosystem-analysis.md
patches/: @shopify__react-native-skia@2.6.2.patch  react-native-svg@15.15.4.patch
scripts/: generate-random-coloring.ts  test-social-posting.ts
utils/: email.ts  random.ts
(+2220 files in other folders)
